--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13",
+    "validator": "^13.12.0",
     "webpack": "^5.91.0"
   }
 }
